<resources>
    <string name="app_name">My Application</string>
    <string name="SS">System Settings</string>
    <string name="P">Privacy</string>
    <string name="A">Active mode</string>
    <string name="D">Data management</string>
    <string name="S">Security</string>
    <string name="R">Remote Control</string>
    <string name="Cl">Clear Data</string>
    <string name="AL">Allow AI learn your daily routine from collected data</string>
    <string name="AL1">Authorize the sharing of personal data with the company to improve users\' experiences</string>
    <string name="Cemera">Cemera Privacy Level</string>
    <string name="MIC">Microphone Privacy Level</string>
    <string name="PR3">Only allow robot assistent move around in living room</string>
    <string name="AM">Active Mode</string>
    <string name="PM">Passive Mode</string>
    <string name="EM">Emergency Mode</string>
    <string name="ALARM">"Alarm when user leave home and detect someone want to enter this house from door or windows "</string>
    <string name="ALARM3">Notice user by App when alarming</string>
    <string name="ALARM2">Lock all the windows and doors</string>
    <string name="UIHM">User in home mode</string>
    <string name="ULM">User leave mode</string>
    <string name="PD">Please Download Application on your smart phone!</string>
    <string name="RN">Receive notice from AI assistant</string>
    <string name="ALFS">Allow AI assistant collect information via your smart phone\'s microphone and cemera</string>
    <string name="ALE">Allow user check Energy cost and cotrol devices via application</string>
    <string name="SYNC">Sync scene mode settings from Application</string>
</resources>